--- a/src/infrastructure/web/app/index.html
+++ b/src/infrastructure/web/app/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Tonalys</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/tonalys/">
+  <meta name="msapplication-tap-highlight" content="no"/>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="mobile-web-app-capable" content="yes"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon.png">
+
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
